snapshot-tests/tests/snapshots/parser__bad_table_names__period.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[wanted]: expected a table key, found a period
  ┌─ period:1:2
  │
1 │ [.]
  │  ^ expected a table key
